CB-22629 Simplify resource operations by removing `ResourceRequestResult` and `FutureResult`  Dropped redundant classes (`FutureResult`, `ResourceRequestResult`, etc.), refactored related methods to remove extra layers. Adjusted return types for resource callables to directly return processed results. Streamlined resource operation handling.